add: request deposit and transaction
