# server/deposit.go
@@ -1,0 +1,9 @@
+package server
+
+func (s *App) depositRoute() {
+	deposit := s.Route.Group("/deposit")
+	{
+		deposit.Post("/request", s.Controller.CreateDepositRequest)
+		deposit.Get("/request/:id", s.Controller.GetDepositRequestStatus)
+	}
+}
